# claude-shell

./: .gitignore  CMakeLists.txt  README.md  build.info  icon.icns  icon1.icns
Resources/: ClaudeShell.entitlements  Credits.rtf  Info.plist.in
Resources/English.lproj/HelpDocs/: index.html  index.html.in  style.css
_scripts/: archive.sh  build.sh  refresh-help.sh
cmake/: configure-help.cmake
frontend/: app.js  index.html  style.css
src/: main.cpp  resources.cpp  tests.cpp
src/app/: Application.cpp  Application.h  CLI.cpp  CLI.h  IpcController.cpp  IpcController.h  macOS_integration.mm
src/core/: CloudflareProvider.h  DevTunnelProvider.h  NgrokProvider.h  ProcessHandle.cpp  ProcessHandle.h  ProxyServer.cpp  ProxyServer.h  SessionInfo.h  SessionManager.cpp  SessionManager.h  TunnelManager.cpp  TunnelManager.h  TunnelProvider.h
src/gui/: InfoHeader.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  ProxyPanel.cpp  ProxyPanel.h  QrCodeWidget.h  SessionPanel.cpp  SessionPanel.h  TunnelDetailsDialog.h  TunnelPanel.cpp  TunnelPanel.h
src/net/: AuthToken.h  WebSocketServer.cpp  WebSocketServer.h
src/util/: Logger.h  Platform.h  incbin.h
